syntax = "proto3";

package authentication;

option go_package = "/authentication";

service Authentication {
   rpc AuthenticateWithEmailAndPassword(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  bool success = 1;
}